Fixed styling in gamepage and rewardspage to keep consistency, added scroll button on text-box to handle overflow

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,5 +32,6 @@ body {
   align-items: center;
   justify-content: flex-start; /* Align from top */
   box-sizing: border-box;
+  overflow: hidden;
 }
 
